# bumblecore

./: .gitignore  CONTRIBUTING.md  README.md  README_zh.md  pyproject.toml
configs/dpo/: dpo_full.yaml  dpo_lora.yaml
configs/inference/: bumblechat.yaml  chat.yaml
configs/pretrain/: pretrain_full.yaml
configs/sft/: sft_full.yaml  sft_lora.yaml
docs/: CONFIG.md  DATA_FORMAT.md  DATA_FORMAT_zh.md  FEATURES.md  TUTORIAL.md  TUTORIAL_zh.md
frontend/: bumblechat.html
frontend/static/css/: styles.css
scripts/: bumblechat.sh
src/: api.py
src/bumblecore/bumblebee/: __init__.py  modeling_bumblebee.py
src/bumblecore/cli/: __init__.py
src/bumblecore/config/: __init__.py
src/bumblecore/data_processing/: __init__.py  data_formatter.py  datasets.py
src/bumblecore/inference/: __init__.py  api.py  inference.py  streaming.py
src/bumblecore/model_loss/: loss.py
src/bumblecore/training/: __init__.py  base_trainer.py  dpo_trainer.py
src/bumblecore/utils/: __init__.py
tests/: conftest.py  run_test.sh
tests/bumblecore/cli/: test_arg_parser.py
tests/bumblecore/data_processing/: test_data_formatter.py  test_datasets.py
tests/bumblecore/training/: test_launcher.py
tools/: merge_lora.py  run_merge_lora.sh
