[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bumblecore"
version = "0.1.0"
description = "Bumblebee core training and inference framework"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "wxhcore"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch==2.7.0",
    "transformers==4.57.3",
    "deepspeed==0.17.2",
    "peft==0.17.1",
    "tqdm==4.67.1",
    "typing-extensions==4.14.0",
    "matplotlib==3.10.5",
    "numpy==2.2.6",
    "tensorboard==2.20.0",
    "fastapi==0.115.9",
    "uvicorn[standard]==0.34.3",
    "pydantic==2.11.5",
    "pyyaml==6.0.2",
    "rich==14.0.0",
    "pytest==9.0.1",
]


[project.optional-dependencies]

vllm = [
    "vllm==0.9.1",
]

[tool.setuptools]
packages = {find = {where = "src"}}

[tool.setuptools.package-dir]
"" = "src"